--- a/pol/collab.html
+++ b/pol/collab.html
@@ -3,15 +3,18 @@
 	<head profile="http://www.w3.org/2005/10/profile">
 		<link rel="icon" type="image/png" href="../favicon2.png">
 		<meta charset="UTF-8">
-		<title>Collaboration</title>
+
 		<link href="../style.css" type="text/css" rel="stylesheet" />
 		<link href="../icomoon.css" type="text/css" rel="stylesheet" />
 		
 		<script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
 		<script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 		<script src="../js/jquery-1.7.2.min.js" type="text/javascript"></script>
-		<script src="../js/pageControl.js" type="text/javascript"></script>
+		<!-- page control: generic collapse boxes and stuff -->
+		<script src="../js/pageControl.js" type="text/javascript"></script> 
+		<!-- web tool: vectors and matrix in JS -->
 		<script src="../js/sylvester.js" type="text/javascript"></script>
+		<!-- web tool: computes sha hastags -->
 		<script src="../js/sha1.js" type="text/javascript"></script>
 		<script src="../js/PrairieDraw.js" type="text/javascript"></script>
 
@@ -20,6 +23,9 @@
 				$("#nav-placeholder").load("../nav.html");
 			});
 		</script>
+
+		
+		<title>Collaboration</title>
 	</head>
 
 <body>
