--- a/dyn/afp.html
+++ b/dyn/afp.html
@@ -3,21 +3,16 @@
   <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta charset="UTF-8">
-    <title>
-      Projectiles with air resistance
-    </title>
     <link href="../style.css" type="text/css" rel="stylesheet" />
     <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
     <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type="text/javascript" </script>
-    <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
-    <script src="sylvester.js" type="text/javascript"></script>
-    <script src="sha1.js" type="text/javascript"></script>
-    <script src="afp.js" type="text/javascript"></script>
-    <script src="PrairieGeom.js" type="text/javascript"></script>
-    <script src="PrairieDrawNew.js" type="text/javascript"></script>
-    <script src="pageControl.js" type="text/javascript"></script>
+    <script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="../js/sylvester.js" type="text/javascript"></script>
+    <script src="../js/sha1.js" type="text/javascript"></script>
+    <script src="../js/PrairieGeom.js" type="text/javascript"></script>
+    <script src="../js/PrairieDrawNew.js" type="text/javascript"></script>
     
     <script>
       $(function(){
@@ -36,7 +31,13 @@
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+    
+    <title>Projectiles with air resistance</title>
+    <script src="afp.js" type="text/javascript"></script>
+
+    <script src="../js/pageControl.js" type="text/javascript"></script>
   </head>
+
   <body>
     <div class="container">
       <div class="header"><h1>Dynamics</h1></div>
