--- a/dyn/aos.html
+++ b/dyn/aos.html
@@ -8,13 +8,11 @@
     <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
-    <script src="sylvester.js" type="text/javascript"></script>
-    <script src="sha1.js" type="text/javascript"></script>
-    <script src="PrairieDraw.js" type="text/javascript"></script>
-    <script src="aos.js" type="text/javascript"></script>
-    <script src="pageControl.js" type="text/javascript"></script>
+    <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
+    <script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="../js/sylvester.js" type="text/javascript"></script>
+    <script src="../js/sha1.js" type="text/javascript"></script>
+    <script src="../js/PrairieDraw.js" type="text/javascript"></script>
 
     <script>
         $(function() {
@@ -33,9 +31,11 @@
       })();
     </script>
     
-    <link href="aos.css" type="text/css" rel="stylesheet" />
-    <script src="worldCoastlineCompressed.js" type="text/javascript"></script>
     <title>Shortest flight paths</title>
+    <link href="aos.css" type="text/css" rel="stylesheet" />
+    <script src="aos.js" type="text/javascript"></script>
+    <script src="worldCoastlineCompressed.js" type="text/javascript"></script>
+    <script src="../js/pageControl.js" type="text/javascript"></script>
   </head>
 
   <body>
