--- a/dyn/ref.html
+++ b/dyn/ref.html
@@ -1,98 +1,101 @@
 <!DOCTYPE html>
 <html>
-  <head profile="http://www.w3.org/2005/10/profile">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <meta charset="UTF-8">
 
-    <link href="../style.css" type="text/css" rel="stylesheet" />
-    <link href="../icomoon.css" type="text/css" rel="stylesheet" />
+<head profile="http://www.w3.org/2005/10/profile">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <meta charset="UTF-8">
+  <link href="../style.css" type="text/css" rel="stylesheet" />
+  <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
-    <script src="pageControl.js" type="text/javascript"></script>
-    <script src="sylvester.js" type="text/javascript"></script>
-    <script src="sha1.js" type="text/javascript"></script>
-    <script src="PrairieDraw.js" type="text/javascript"></script>
-    
-    <script>
-      $(function(){
-        $("#nav-placeholder").load("../nav.html");
-      });
-    </script>
+  <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+  <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
+  <script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="../js/sylvester.js" type="text/javascript"></script>
+  <script src="../js/sha1.js" type="text/javascript"></script>
+  <script src="../js/PrairieDraw.js" type="text/javascript"></script>
+  <script>
+    $(function () {
+      $("#nav-placeholder").load("../nav.html");
+    });
+  </script>
 
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-37625161-1']);
-      _gaq.push(['_trackPageview']);
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-37625161-1']);
+    _gaq.push(['_trackPageview']);
 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
+    (function () {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
 
-<title>Reference</title>
-  </head>
+  <title>Reference</title>
 
-  <body>
-    <div class="container">
-      <div class="header"><h1>Dynamics</h1></div>
-      <div id="nav-placeholder"></div>
+  <script src="../js/pageControl.js" type="text/javascript"></script>
+</head>
 
-      <div class="mainBlock">
-    <div class="tocContainer">
-    <div class="tocColumn">
-      <ol>
-        <li>Positions and vectors
-        <ol>
-          <li><a href="rvp.html">Positions and coordinates</a></li>
-          <li><a href="rvv.html">Vectors and bases</a></li>
-          <li><a href="rvi.html">Vector identities</a></li>
-          <li><a href="rvc.html">Calculus and vectors</a></li>
-          <li><a href="rvy.html">Cylindrical coordinates</a></li>
-          <li><a href="rvs.html">Spherical coordinates</a></li>
-          <li><a href="rvn.html">Notation</a></li>
-        </ol>
-        </li>
-        <li>Kinematics
-        <ol>
-          <li><a href="rkr.html">Rotations and angular velocity</a></li>
-          <li><a href="rkv.html">Position, velocity, and acceleration</a></li>
-          <li><a href="rkt.html">Tangential/normal basis</a></li>
-          <li><a href="rke.html">Elementary motions</a></li>
-          <li><a href="rkm.html">Coordinate system comparison</a></li>
-          <li><a href="rkg.html">Rigid bodies</a></li>
-          <li><a href="rkc.html">Constraints and constrained motion</a></li>
-          <li><a href="rko.html">Rolling motion</a></li>
-          <li>Relative motion and frames</li>
-        </ol>
-        </li>
-      </ol>
+<body>
+  <div class="container">
+    <div class="header">
+      <h1>Dynamics</h1>
     </div>
-    <div class="tocColumn">
-      <ol>
-        <li>Kinetics
-        <ol>
-          <li><a href="rep.html">Kinetics of point masses</a></li>
-          <li><a href="reg.html">Kinetics of rigid bodies</a></li>
-          <li><a href="rem.html">Moments of inertia</a></li>
-          <li>Free body diagrams</li>
-          <li>Accelerating coordinate frames</li>
-          <li><a href="ren.html">Energy and work</a></li>
-          <li>Conservative forces</li>
-          <li>Momentum, impulse, and collisions</li>
-          <li><a href="rfr.html">Friction and damping</a></li>
-        </ol>
-        </li>
-      </ol>
-    </div>
-    </div>
-    </div>
-      <div class="footer">
-        <p class="copyright">Copyright (C) 2012-2015 Matthew West</p>
+    <div id="nav-placeholder"></div>
+
+    <div class="mainBlock">
+      <div class="tocContainer">
+        <div class="tocColumn">
+          <ol>
+            <li>Positions and vectors
+              <ol>
+                <li><a href="rvp.html">Positions and coordinates</a></li>
+                <li><a href="rvv.html">Vectors and bases</a></li>
+                <li><a href="rvi.html">Vector identities</a></li>
+                <li><a href="rvc.html">Calculus and vectors</a></li>
+                <li><a href="rvy.html">Cylindrical coordinates</a></li>
+                <li><a href="rvs.html">Spherical coordinates</a></li>
+                <li><a href="rvn.html">Notation</a></li>
+              </ol>
+            </li>
+            <li>Kinematics
+              <ol>
+                <li><a href="rkr.html">Rotations and angular velocity</a></li>
+                <li><a href="rkv.html">Position, velocity, and acceleration</a></li>
+                <li><a href="rkt.html">Tangential/normal basis</a></li>
+                <li><a href="rke.html">Elementary motions</a></li>
+                <li><a href="rkm.html">Coordinate system comparison</a></li>
+                <li><a href="rkg.html">Rigid bodies</a></li>
+                <li><a href="rkc.html">Constraints and constrained motion</a></li>
+                <li><a href="rko.html">Rolling motion</a></li>
+                <li>Relative motion and frames</li>
+              </ol>
+            </li>
+          </ol>
+        </div>
+        <div class="tocColumn">
+          <ol>
+            <li>Kinetics
+              <ol>
+                <li><a href="rep.html">Kinetics of point masses</a></li>
+                <li><a href="reg.html">Kinetics of rigid bodies</a></li>
+                <li><a href="rem.html">Moments of inertia</a></li>
+                <li>Free body diagrams</li>
+                <li>Accelerating coordinate frames</li>
+                <li><a href="ren.html">Energy and work</a></li>
+                <li>Conservative forces</li>
+                <li>Momentum, impulse, and collisions</li>
+                <li><a href="rfr.html">Friction and damping</a></li>
+              </ol>
+            </li>
+          </ol>
+        </div>
       </div>
     </div>
-  </body>
+    <div class="footer">
+      <p class="copyright">Copyright (C) 2012-2015 Matthew West</p>
+    </div>
+  </div>
+</body>
+
 </html>
