--- a/dyn/reg.html
+++ b/dyn/reg.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8">
 
     <link href="../style.css" type="text/css" rel="stylesheet" />
-    <link href="reg.css" type="text/css" rel="stylesheet" />
     <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
-    <script src="pageControl.js" type="text/javascript"></script>
-    <script src="sylvester.js" type="text/javascript"></script>
-    <script src="sha1.js" type="text/javascript"></script>
-    <script src="PrairieDraw.js" type="text/javascript"></script>
+    <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
+    <script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="../js/sylvester.js" type="text/javascript"></script>
+    <script src="../js/sha1.js" type="text/javascript"></script>
+    <script src="../js/PrairieDraw.js" type="text/javascript"></script>
     
     <script>
       $(function(){
@@ -35,6 +33,9 @@
     </script>
 
     <title>Kinetics of rigid bodies</title>
+    <link href="reg.css" type="text/css" rel="stylesheet" />
+    
+    <script src="../js/pageControl.js" type="text/javascript"></script>
   </head>
   
   <body>
