--- a/dyn/rnb.html
+++ b/dyn/rnb.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <link href="../style.css" type="text/css" rel="stylesheet">
   <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type="text/javascript" </script>
-  <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
-  <script src="pageControl.js" type="text/javascript"></script>
-  <script src="sylvester.js" type="text/javascript"></script>
-  <script src="sha1.js" type="text/javascript"></script>
-  <script src="PrairieDraw.js" type="text/javascript"></script>
+  <script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+  <script src="../js/sylvester.js" type="text/javascript"></script>
+  <script src="../js/sha1.js" type="text/javascript"></script>
+  <script src="../js/PrairieDraw.js" type="text/javascript"></script>
+  <script src="../js/pageControl.js" type="text/javascript"></script>
   <script>
       $(function () {
           $("#nav-placeholder").load("../nav.html");
