--- a/dyn/rvn.html
+++ b/dyn/rvn.html
@@ -3,15 +3,13 @@
   <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="favicon.png">
     <meta charset="UTF-8">
-
     <link href="../style.css" type="text/css" rel="stylesheet" />
-    <link href="rvn.css" type="text/css" rel="stylesheet" />
     <link href="../icomoon.css" type="text/css" rel="stylesheet" />
 
     <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']], processEscapes: true}});</script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src="jquery-1.7.2.min.js" type="text/javascript"></script>
-    <script src="pageControl.js" type="text/javascript"></script>
+    <script src="../MathJax-master/MathJax.js?config=TeX-AMS-MML_HTMLorMML,local/local"> type = "text/javascript" </script>
+    <script src="../js/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="../js/pageControl.js" type="text/javascript"></script>
 
     <script>
       $(function(){
@@ -31,6 +29,7 @@
     </script>
     
     <title>Notation</title>
+    <link href="rvn.css" type="text/css" rel="stylesheet" />
   </head>
 
   <body>
